--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "axios": "^1.3.5",
+    "@tanstack/react-query": "4.28",
+    "@tanstack/react-query-devtools": "4.28",
+    "axios": "^1.5.0",
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
